tools/php-ffmpeg-ext/ffmpeg/tests/hasAudio.out
Fatal error: Class 'ffmpeg_movie' not found in /var/www/html/dandan/tools/php-ffmpeg-ext/ffmpeg/tests/hasAudio.php on line 2